; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nft_objref.c_nft_objref_map_deactivate.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nft_objref.c_nft_objref_map_deactivate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nft_ctx = type { i32 }
%struct.nft_expr = type { i32 }
%struct.nft_objref_map = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nft_ctx*, %struct.nft_expr*, i32)* @nft_objref_map_deactivate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nft_objref_map_deactivate(%struct.nft_ctx* %0, %struct.nft_expr* %1, i32 %2) #0 {
  %4 = alloca %struct.nft_ctx*, align 8
  %5 = alloca %struct.nft_expr*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nft_objref_map*, align 8
  store %struct.nft_ctx* %0, %struct.nft_ctx** %4, align 8
  store %struct.nft_expr* %1, %struct.nft_expr** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nft_expr*, %struct.nft_expr** %5, align 8
  %9 = call %struct.nft_objref_map* @nft_expr_priv(%struct.nft_expr* %8)
  store %struct.nft_objref_map* %9, %struct.nft_objref_map** %7, align 8
  %10 = load %struct.nft_ctx*, %struct.nft_ctx** %4, align 8
  %11 = load %struct.nft_objref_map*, %struct.nft_objref_map** %7, align 8
  %12 = getelementptr inbounds %struct.nft_objref_map, %struct.nft_objref_map* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.nft_objref_map*, %struct.nft_objref_map** %7, align 8
  %15 = getelementptr inbounds %struct.nft_objref_map, %struct.nft_objref_map* %14, i32 0, i32 0
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @nf_tables_deactivate_set(%struct.nft_ctx* %10, i32 %13, i32* %15, i32 %16)
  ret void
}

declare dso_local %struct.nft_objref_map* @nft_expr_priv(%struct.nft_expr*) #1

declare dso_local i32 @nf_tables_deactivate_set(%struct.nft_ctx*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
